# embbridge

./: .gitignore  LICENSE  PLAN.md  README.md
agent/: CMakeLists.txt  Makefile
agent/include/: commands.h  edb.h
agent/src/: main.c  protocol.c  transport.c
agent/src/commands/: basic_commands.c  cmd_dispatch.c  file_operations.c  file_transfer.c  helpers.c  system_commands.c
agent/src/commands/system/: cpuinfo.c  dmesg.c  exec.c  ip.c  kill_agent.c  mtd.c  ps.c  reboot.c  ss.c  strings.c  uname.c  whoami.c
client/: go.mod  go.sum  main.go
client/cmd/: exec.go  listen.go  root.go  shell.go  test.go  transfer.go
client/protocol/: protocol.go
client/shell/: cmd_fileops.go  cmd_navigation.go  cmd_system.go  cmd_transfer.go  helpers.go  module.go  shell.go
docs/: architecture-reference.md  building.md  commands.md  index.md  protocol.md  quickstart.md
scripts/: build-toolchains.sh
tui/: .gitignore  README.md  go.mod  go.sum  main.go
tui/docs/: autocomplete.md
tui/internal/connection/: device.go  manager.go  session.go  storage.go
tui/internal/shell/: completer.go  shell.go
tui/internal/shell/commands/: format.go  fs.go  helpers.go  misc.go  module.go  network.go  system.go  transfer.go
tui/internal/tui/: model.go  view.go
tui/internal/ui/theme/: theme.go
